--- a/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -138,10 +138,10 @@ GridEnabled=False
 CurrentScalingGridSize=5
 
 [EditorStartup]
-LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
+LastLevel=/Game/Kvik/KvikSave/Test_Car
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -3201,9 +3201,9 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=-6.400 Y=0.000
-WindowSize=X=1484.800 Y=819.200
-InitiallyMaximized=False
+ScreenPosition=X=214.000 Y=107.000
+WindowSize=X=1485.000 Y=820.000
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -3230,7 +3230,7 @@ FourPanes2x2.Viewport 2.bIsMaximized=True
 FourPanes2x2.Viewport 2.MaximizedViewport=FourPanes2x2.Viewport 2.Viewport1
 
 [Directories2]
-UNR=../../../../Works/WarInUkraine/WarInUkraine/Content/Kvik/KvikSave
+UNR=C:/Users/aferar/Documents/Unreal Projects/WarInUkraine/WarInUkraine/Content/Kvik/KvikSave
 BRUSH=C:/Users/aferar/Documents/Unreal Projects/WarInUkraine/WarInUkraine/Content/
 FBX=C:/Users/aferar/Documents/Unreal Projects/WarInUkraine/WarInUkraine/Content/
 FBXAnim=C:/Users/aferar/Documents/Unreal Projects/WarInUkraine/WarInUkraine/Content/
@@ -4126,10 +4126,10 @@ WidgetCarousel.TimeStamp=2022.11.22-02.46.53
 WidgetCarousel.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2022.11.22-02.46.34
 HierarchicalLODOutliner.LastCompileMethod=Unknown
-Voice.TimeStamp=2022.11.19-11.19.01
-Voice.LastCompileMethod=Unknown
-MovieSceneCapture.TimeStamp=2022.11.19-11.18.13
-MovieSceneCapture.LastCompileMethod=Unknown
+Voice.TimeStamp=2022.11.22-02.46.52
+Voice.LastCompileMethod=External
+MovieSceneCapture.TimeStamp=2022.11.22-02.46.38
+MovieSceneCapture.LastCompileMethod=External
 BlueprintGraph.TimeStamp=2022.11.19-11.17.12
 BlueprintGraph.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2022.11.19-11.18.36
@@ -4148,14 +4148,14 @@ PhysicsAssetEditor.TimeStamp=2022.11.19-11.18.22
 PhysicsAssetEditor.LastCompileMethod=Unknown
 NewLevelDialog.TimeStamp=2022.11.19-11.18.18
 NewLevelDialog.LastCompileMethod=Unknown
-ChaosVehicles.TimeStamp=2022.11.19-11.57.03
-ChaosVehicles.LastCompileMethod=Unknown
-ChaosVehiclesEditor.TimeStamp=2022.11.19-11.57.03
-ChaosVehiclesEditor.LastCompileMethod=Unknown
-ChaosCaching.TimeStamp=2022.11.19-11.56.59
-ChaosCaching.LastCompileMethod=Unknown
-ChaosCachingEditor.TimeStamp=2022.11.19-11.56.59
-ChaosCachingEditor.LastCompileMethod=Unknown
+ChaosVehicles.TimeStamp=2022.11.22-02.55.23
+ChaosVehicles.LastCompileMethod=External
+ChaosVehiclesEditor.TimeStamp=2022.11.22-02.55.23
+ChaosVehiclesEditor.LastCompileMethod=External
+ChaosCaching.TimeStamp=2022.11.22-02.55.22
+ChaosCaching.LastCompileMethod=External
+ChaosCachingEditor.TimeStamp=2022.11.22-02.55.22
+ChaosCachingEditor.LastCompileMethod=External
 CurveAssetEditor.TimeStamp=2022.11.19-11.17.28
 CurveAssetEditor.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2022.11.19-11.18.46
@@ -4163,8 +4163,8 @@ TextureEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=D:/EpicGames/Unrial5/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UnrealEngine/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/EpicGames/Unrial5/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartition.None,WorldSettings.GameMode.SelectedGameModeDetails,
@@ -4494,7 +4494,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/1WUI/Scenes
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -4983,13 +4983,13 @@ User Created=True
 Advanced=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Kvik/Kvik_Modes/Cars/Tank/Kv_Tank_Anim
-MRUItem1=/Game/Kvik/Kv_Materials/M_Kv_Track_2_Inst
-MRUItem2=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem3=/Game/Kvik/Kv_Materials/M_Kv_Tanck
-MRUItem4=/Game/Kvik/Kvik_Modes/Cars/Tank/Kv_Tank_Pawn
-MRUItem5=/Game/Kvik/Kv_Materials/M_Kv_Track_2
-MRUItem6=/Game/Kvik/KvikSave/Test_Car
+MRUItem0=/Game/Kvik/KvikSave/Test_Car
+MRUItem1=/Game/Kvik/Kvik_Modes/Cars/Tank/Kv_Tank_Anim
+MRUItem2=/Game/Kvik/Kv_Materials/M_Kv_Track_2_Inst
+MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem4=/Game/Kvik/Kv_Materials/M_Kv_Tanck
+MRUItem5=/Game/Kvik/Kvik_Modes/Cars/Tank/Kv_Tank_Pawn
+MRUItem6=/Game/Kvik/Kv_Materials/M_Kv_Track_2
 MRUItem7=/Game/Kvik/Kv_Materials/M_Kv_Tanck_Inst
 MRUItem8=/Game/Kvik/Kv_Materials/NewMaterial
 MRUItem9=/Engine/Functions/Engine_MaterialFunctions02/WorldPositionOffset/CameraOffset
