--- a/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -146,9 +146,7 @@ SnapScaleEnabled=False
 LastLevel=/Game/Kvik/KvikSave/Test_Car
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/1WUI/Mesh/Vehicle/WoltsvagenTransporter/BP_Kv_T4_Pawn.BP_Kv_T4_Pawn
-OpenAssetsAtExit=/Game/Kvik/Kv_UI_Canvas/UI_Kv_Car_T4.UI_Kv_Car_T4
+CleanShutdown=False
 OpenAssetsAtExit=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/BP_Kv_PlayerHand_Pawn.BP_Kv_PlayerHand_Pawn
 
 [DetailCategories]
@@ -6624,8 +6622,8 @@ GlobalAssetPicker.CurrentViewType=0
 InstalledPlugins=XRVisualization
 
 [DetailPropertyExpansion]
-WorldSettings="\"Object.Lightmass.LightmassSettings\" "
-Info="\"Object.Lightmass.LightmassSettings\" "
+WorldSettings="\"Object.Lightmass.LightmassSettings\" \"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
+Info="\"Object.Lightmass.LightmassSettings\" \"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
@@ -7293,11 +7291,11 @@ User Created=True
 Advanced=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Kvik/Kv_UI_Canvas/UI_Kv_Car_T4
-MRUItem1=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/BP_Kv_PlayerHand_Pawn
-MRUItem2=/Game/Kvik/Kv_UI_Canvas/UI_Kv_Intepface
-MRUItem3=/Game/1WUI/Mesh/Vehicle/WoltsvagenTransporter/BP_Kv_T4_Pawn
-MRUItem4=/Game/Kvik/KvikSave/Test_Car
+MRUItem0=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/BP_Kv_PlayerHand_Pawn
+MRUItem1=/Game/Kvik/KvikSave/Test_Car
+MRUItem2=/Game/Kvik/Kv_UI_Canvas/UI_Kv_Car_T4
+MRUItem3=/Game/Kvik/Kv_UI_Canvas/UI_Kv_Intepface
+MRUItem4=/Game/1WUI/Mesh/Vehicle/WoltsvagenTransporter/BP_Kv_T4_Pawn
 MRUItem5=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/Anim_Hand_Aim
 MRUItem6=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/Hand_1_Skeleton
 MRUItem7=/Game/Kvik/Kvik_Modes/Fly/BayraktarTB2_Bayraktar
