--- a/WarInUkraine/Config/DefaultEngine.ini
+++ b/WarInUkraine/Config/DefaultEngine.ini
@@ -52,6 +52,7 @@ DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/WarInUkraine")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/WarInUkraine")
+NearClipPlane=1.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
