--- a/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -152,7 +152,7 @@ K2Node_VariableGet=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformC
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.WorldPartition.None,
 WorldPartitionRuntimeSpatialHash=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.WorldPartition.None,
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative,
-ChController_Player_new_C=
+ChController_Player_new_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 K2Node_VariableSet=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 PropertyWrapper=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 ABP_Kv_AK_2_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
@@ -200,7 +200,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim
+ContentBrowserDrawer.SelectedPaths=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -269,12 +269,10 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/Kvik/KvikSave/Test_Car
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ChController_Player_new.ChController_Player_new
 OpenAssetsAtExit=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ABP_Kv_NawHand.ABP_Kv_NawHand
 OpenAssetsAtExit=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/ABP_Kv_AK_2.ABP_Kv_AK_2
-OpenAssetsAtExit=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Fire_animation_1_7.Hand_Fire_animation_1_7
-OpenAssetsAtExit=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Fire_animation_1_7.Hand_Fire_animation_1_7
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -289,11 +287,11 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()))
 
 [DetailPropertyExpansion]
-WorldSettings=
-Info=
+WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
+Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.SkeletalMeshes\" "
+Object="\"Object\" \"Object.Events.TransitionInterrupt\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 BoxComponent="\"Object\" "
@@ -475,12 +473,12 @@ K2Node_InputAction="\"Object\" "
 BP_FirstPersonCharacter_C="\"Object\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Fire_animation_1_7
-MRUItem1=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Fire_animation_1_7
-MRUItem2=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/ABP_Kv_AK_2
-MRUItem3=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ABP_Kv_NawHand
-MRUItem4=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ChController_Player_new
-MRUItem5=/Game/Kvik/KvikSave/Test_Car
+MRUItem0=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/ABP_Kv_AK_2
+MRUItem1=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ABP_Kv_NawHand
+MRUItem2=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ChController_Player_new
+MRUItem3=/Game/Kvik/KvikSave/Test_Car
+MRUItem4=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Fire_animation_1_7
+MRUItem5=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Fire_animation_1_7
 MRUItem6=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Run_animation_0_3
 MRUItem7=/Game/FirstPerson/Blueprints/BP_Rifle
 MRUItem8=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
