--- a/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -147,7 +147,7 @@ BoxComponent=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.C
 Character=
 BP_Kv_Hend_1_Mode_C=StaticMeshActor.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 BP_Kv_PlayerHand_Pawn_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
-CapsuleComponent=
+CapsuleComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 K2Node_VariableGet=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.WorldPartition.None,
 WorldPartitionRuntimeSpatialHash=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.WorldPartition.None,
@@ -181,6 +181,7 @@ EdGraphNode_Comment=BoxComponent.Physics.ConstraintsGroup,BoxComponent.Transform
 SkeletalMeshComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 AnimStateNode=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 AnimStateTransitionNode=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
+PlayerStart=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -200,7 +201,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder
+ContentBrowserDrawer.SelectedPaths=/Game/Kvik/Kv_UI_Canvas
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -269,10 +270,11 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/Kvik/KvikSave/Test_Car
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/BP_Kv_PlayerHand_Pawn.BP_Kv_PlayerHand_Pawn
 OpenAssetsAtExit=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ChController_Player_new.ChController_Player_new
-OpenAssetsAtExit=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ABP_Kv_NawHand.ABP_Kv_NawHand
-OpenAssetsAtExit=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/ABP_Kv_AK_2.ABP_Kv_AK_2
+OpenAssetsAtExit=/Game/Kvik/Kv_UI_Canvas/UI_Kv_Intepface.UI_Kv_Intepface
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -287,11 +289,11 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()))
 
 [DetailPropertyExpansion]
-WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
-Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
+WorldSettings=
+Info=
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Events.TransitionInterrupt\" "
+Object="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 BoxComponent="\"Object\" "
@@ -322,7 +324,7 @@ K2Node_InputAxisEvent="\"Object\" "
 K2Node_Event="\"Object\" "
 K2Node_EditablePinBase="\"Object\" "
 K2Node="\"Object\" "
-EdGraphNode="\"Object\" \"Object.Events.TransitionInterrupt\" "
+EdGraphNode="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
 SkeletalBodySetup="\"Object\" "
 BodySetup="\"Object\" "
@@ -471,28 +473,34 @@ K2Node_Switch="\"Object\" "
 ChController_Player_new_C="\"Object\" "
 K2Node_InputAction="\"Object\" "
 BP_FirstPersonCharacter_C="\"Object\" "
+Kv_Help_Player_C="\"Object\" "
+EditorUtilityWidget="\"Object\" "
+UserWidget="\"Object\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
+UI_Kv_Intepface_C="\"Object\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/ABP_Kv_AK_2
-MRUItem1=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ABP_Kv_NawHand
+MRUItem0=/Game/Kvik/Kv_UI_Canvas/UI_Kv_Intepface
+MRUItem1=/Game/Kvik/Kv_UI_Canvas/Kv_Help_Player
 MRUItem2=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ChController_Player_new
-MRUItem3=/Game/Kvik/KvikSave/Test_Car
-MRUItem4=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Fire_animation_1_7
-MRUItem5=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Fire_animation_1_7
-MRUItem6=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Run_animation_0_3
-MRUItem7=/Game/FirstPerson/Blueprints/BP_Rifle
-MRUItem8=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem9=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Fire_animation_1_5
-MRUItem10=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/BP_Kv_PlayerHand_Pawn
-MRUItem11=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Idle_animation_0_1
-MRUItem12=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Idle_animation_0_1
-MRUItem13=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Fire_animation_1_3
-MRUItem14=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Fire_animation_1_3
-MRUItem15=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Walk_Right_animation_0_1
-MRUItem16=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Idle_to_ADS_animation_1_2
-MRUItem17=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Fire_animation_1_2
-MRUItem18=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Fire_animation_1_2
-MRUItem19=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Fire_animation_1_1
+MRUItem3=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/BP_Kv_PlayerHand_Pawn
+MRUItem4=/Game/Kvik/KvikSave/Test_Car
+MRUItem5=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/ABP_Kv_Hand_Anim
+MRUItem6=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/ABP_Kv_AK_2
+MRUItem7=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ABP_Kv_NawHand
+MRUItem8=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Fire_animation_1_7
+MRUItem9=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Fire_animation_1_7
+MRUItem10=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Run_animation_0_3
+MRUItem11=/Game/FirstPerson/Blueprints/BP_Rifle
+MRUItem12=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem13=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Fire_animation_1_5
+MRUItem14=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Idle_animation_0_1
+MRUItem15=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Idle_animation_0_1
+MRUItem16=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Fire_animation_1_3
+MRUItem17=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Fire_animation_1_3
+MRUItem18=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Walk_Right_animation_0_1
+MRUItem19=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Idle_to_ADS_animation_1_2
 
 [DetailCategories]
 BP_Kv_PlayerHand_Pawn_C.Default=True
@@ -1281,6 +1289,42 @@ BP_Rifle_C.Input=True
 BP_Rifle_C.HLOD=True
 BP_Rifle_C.WorldPartition=True
 BP_Rifle_C.Events=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.HLOD=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+Kv_Help_Player_C.Config=True
+Kv_Help_Player_C.Settings=True
+Kv_Help_Player_C.Appearance=True
+Kv_Help_Player_C.Designer=True
+Kv_Help_Player_C.Input=True
+Kv_Help_Player_C.Interaction=True
+Kv_Help_Player_C.Performance=True
+Kv_Help_Player_C.Layout=True
+Kv_Help_Player_C.Behavior=True
+Kv_Help_Player_C.Render Transform=True
+Kv_Help_Player_C.Localization=True
+Kv_Help_Player_C.Accessibility=True
+Kv_Help_Player_C.Clipping=True
+Kv_Help_Player_C.Navigation=True
+UI_Kv_Intepface_C.Default=True
+UI_Kv_Intepface_C.Config=True
+UI_Kv_Intepface_C.Settings=True
+UI_Kv_Intepface_C.Appearance=True
+UI_Kv_Intepface_C.Designer=True
+UI_Kv_Intepface_C.Input=True
+UI_Kv_Intepface_C.Interaction=True
+UI_Kv_Intepface_C.Performance=True
+UI_Kv_Intepface_C.Layout=True
+UI_Kv_Intepface_C.Behavior=True
+UI_Kv_Intepface_C.Render Transform=True
+UI_Kv_Intepface_C.Localization=True
+UI_Kv_Intepface_C.Accessibility=True
+UI_Kv_Intepface_C.Clipping=True
+UI_Kv_Intepface_C.Navigation=True
 
 [SuppressableDialogs]
 DeleteComponentInUse_Warning=False
@@ -1335,6 +1379,8 @@ DeleteConfirmationVariable_Warning=False
 /Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Run_animation_0_3.Hand_Run_animation_0_3=0
 /Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Fire_animation_1_7.Hand_Fire_animation_1_7=0
 /Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Fire_animation_1_7.Hand_Fire_animation_1_7=0
+/Game/Kvik/Kv_UI_Canvas/Kv_Help_Player.Kv_Help_Player=1
+/Game/Kvik/Kv_UI_Canvas/UI_Kv_Intepface.UI_Kv_Intepface=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1381,7 +1427,7 @@ GraphEditorQuickJumps=()
 
 [RootWindow]
 ScreenPosition=X=141.600 Y=52.000
-WindowSize=X=1333.600 Y=773.600
+WindowSize=X=1338.400 Y=778.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2527,6 +2573,7 @@ Contexts=(Name="AnimationBlueprintEditor",Commands=)
 Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 
 [PlacementMode]
+RecentlyPlaced=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ChController_Player_new.ChController_Player_new;
 RecentlyPlaced=/Game/Kvik/BP_Kv_Logik/BP_Kv_Ladder_Actor.BP_Kv_Ladder_Actor;
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
@@ -2628,4 +2675,79 @@ PrimType=1
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
 Engine=True
+
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
 
