--- a/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -267,14 +267,11 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Kvik/KvikSave/Test_Car
+LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/BP_Kv_PlayerHand_Pawn.BP_Kv_PlayerHand_Pawn
-OpenAssetsAtExit=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ChController_Player_new.ChController_Player_new
-OpenAssetsAtExit=/Game/Kvik/Kv_UI_Canvas/UI_Kv_Intepface.UI_Kv_Intepface
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -479,28 +476,75 @@ UserWidget="\"Object\" "
 Widget="\"Object\" "
 Visual="\"Object\" "
 UI_Kv_Intepface_C="\"Object\" "
+EditorStyleSettings="\"Object\" "
+AudioEditorSettings="\"Object\" "
+BlueprintEditorSettings="\"Object\" "
+EditorExperimentalSettings="\"Object\" "
+EditorSettings="\"Object\" "
+LiveCodingSettings="\"Object\" "
+EditorLoadingSavingSettings="\"Object\" \"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
+EditorPerProjectUserSettings="\"Object\" "
+EditorPerformanceSettings="\"Object\" "
+InternationalizationSettingsModel="\"Object\" "
+SourceCodeAccessSettings="\"Object\" "
+TextureEncodingUserSettings="\"Object\" "
+EditorTutorialSettings="\"Object\" "
+VRModeSettings="\"Object\" "
+VISettings="\"Object\" "
+LevelEditorMiscSettings="\"Object\" "
+LevelEditorPlaySettings="\"Object\" "
+OnlinePIESettings="\"Object\" "
+LevelEditorViewportSettings="\"Object\" "
+AnimationBlueprintEditorSettings="\"Object\" "
+PersonaOptions="\"Object\" "
+ContentBrowserSettings="\"Object\" "
+ControlRigEditorSettings="\"Object\" "
+CurveEditorSettings="\"Object\" "
+SequencerSettings="\"Object\" "
+FlipbookEditorSettings="\"Object\" "
+GraphEditorSettings="\"Object\" "
+MaterialEditorSettings="\"Object\" "
+MeshPaintSettings="\"Object\" "
+SkeletalMeshEditorSettings="\"Object\" "
+SpriteEditorSettings="\"Object\" "
+TakeRecorderUserSettings="\"Object\" "
+TileMapEditorSettings="\"Object\" "
+TileSetEditorSettings="\"Object\" "
+WidgetDesignerSettings="\"Object\" "
+FractureModeCustomizationSettings="\"Object\" "
+ModelingToolsModeCustomizationSettings="\"Object\" "
+PythonScriptPluginUserSettings="\"Object\" "
+CrashReportsPrivacySettings="\"Object\" \"Object.Options.bSendUnattendedBugReports\" "
+AnalyticsPrivacySettings="\"Object\" \"Object.Options.bSendUsageData\" "
+AutomationTestSettings="\"Object\" "
+CrashReporterSettings="\"Object\" "
+DataValidationSettings="\"Object\" "
+GameplayDebuggerUserSettings="\"Object\" "
+GameplayTagsDeveloperSettings="\"Object\" "
+LogVisualizerSettings="\"Object\" "
+SlateThemeManager="\"Object\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Kvik/Kv_UI_Canvas/UI_Kv_Intepface
-MRUItem1=/Game/Kvik/Kv_UI_Canvas/Kv_Help_Player
-MRUItem2=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ChController_Player_new
-MRUItem3=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/BP_Kv_PlayerHand_Pawn
-MRUItem4=/Game/Kvik/KvikSave/Test_Car
-MRUItem5=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/ABP_Kv_Hand_Anim
-MRUItem6=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/ABP_Kv_AK_2
-MRUItem7=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ABP_Kv_NawHand
-MRUItem8=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Fire_animation_1_7
-MRUItem9=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Fire_animation_1_7
-MRUItem10=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Run_animation_0_3
-MRUItem11=/Game/FirstPerson/Blueprints/BP_Rifle
-MRUItem12=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem13=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Fire_animation_1_5
-MRUItem14=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Idle_animation_0_1
-MRUItem15=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Idle_animation_0_1
-MRUItem16=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Fire_animation_1_3
-MRUItem17=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Fire_animation_1_3
-MRUItem18=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Walk_Right_animation_0_1
-MRUItem19=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Idle_to_ADS_animation_1_2
+MRUItem0=/Game/Kvik/Kvik_Modes/Players/Player_1/Kv_BP_Man
+MRUItem1=/Game/Kvik/Kv_UI_Canvas/UI_Kv_Intepface
+MRUItem2=/Game/Kvik/Kv_UI_Canvas/Kv_Help_Player
+MRUItem3=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ChController_Player_new
+MRUItem4=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/BP_Kv_PlayerHand_Pawn
+MRUItem5=/Game/Kvik/KvikSave/Test_Car
+MRUItem6=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/ABP_Kv_Hand_Anim
+MRUItem7=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/ABP_Kv_AK_2
+MRUItem8=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ABP_Kv_NawHand
+MRUItem9=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Fire_animation_1_7
+MRUItem10=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Fire_animation_1_7
+MRUItem11=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Run_animation_0_3
+MRUItem12=/Game/FirstPerson/Blueprints/BP_Rifle
+MRUItem13=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem14=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Fire_animation_1_5
+MRUItem15=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Idle_animation_0_1
+MRUItem16=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Idle_animation_0_1
+MRUItem17=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Fire_animation_1_3
+MRUItem18=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Fire_animation_1_3
+MRUItem19=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Walk_Right_animation_0_1
 
 [DetailCategories]
 BP_Kv_PlayerHand_Pawn_C.Default=True
@@ -1325,6 +1369,19 @@ UI_Kv_Intepface_C.Localization=True
 UI_Kv_Intepface_C.Accessibility=True
 UI_Kv_Intepface_C.Clipping=True
 UI_Kv_Intepface_C.Navigation=True
+Kv_BP_Man_C.Input=True
+Kv_BP_Man_C.Tick=True
+Kv_BP_Man_C.Camera=True
+Kv_BP_Man_C.Default=True
+Kv_BP_Man_C.Character=True
+Kv_BP_Man_C.Pawn=True
+Kv_BP_Man_C.Replication=True
+Kv_BP_Man_C.Rendering=True
+Kv_BP_Man_C.Collision=True
+Kv_BP_Man_C.Actor=True
+Kv_BP_Man_C.HLOD=True
+Kv_BP_Man_C.WorldPartition=True
+Kv_BP_Man_C.Events=True
 
 [SuppressableDialogs]
 DeleteComponentInUse_Warning=False
@@ -1381,6 +1438,7 @@ DeleteConfirmationVariable_Warning=False
 /Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Fire_animation_1_7.Hand_Fire_animation_1_7=0
 /Game/Kvik/Kv_UI_Canvas/Kv_Help_Player.Kv_Help_Player=1
 /Game/Kvik/Kv_UI_Canvas/UI_Kv_Intepface.UI_Kv_Intepface=0
+/Game/Kvik/Kvik_Modes/Players/Player_1/Kv_BP_Man.Kv_BP_Man=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2750,4 +2808,8 @@ bCompileDirectorOnEvaluate=False
 TrajectoryPathCap=250
 FrameNumberDisplayFormat=Seconds
 MovieRendererName=
+
+[PluginBrowser]
+InstalledPlugins=Substance
+InstalledPlugins=XRVisualization
 
