--- a/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -135,8 +135,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 RotGridEnabled=False
 
 [MRU]
-MRUItem0=/Game/Kvik/KvikSave/Untitled
-MRUItem1=/Game/Kvik/KvikSave/TestLevel
+MRUItem0=/Game/Kvik/KvikSave/TestLevel
+MRUItem1=/Game/Kvik/KvikSave/Untitled
 MRUItem2=/Game/Kvik/KvikSave/Test_Car
 MRUItem3=/Game/1WUI/SceneFirst/TestLight
 
@@ -180,10 +180,11 @@ CameraActor=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.T
 K2Node_CallFunction=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 EdGraphNode=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 EdGraphNode_Comment=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
-SkeletalMeshComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
+SkeletalMeshComponent=
 AnimStateNode=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 AnimStateTransitionNode=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 PlayerStart=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
+Kv_BTR_2_Pawn_C=BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -269,13 +270,14 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Kvik/KvikSave/Untitled
+LastLevel=/Game/Kvik/KvikSave/TestLevel
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Kvik/Kvik_Modes/Players/Player_1/Kv_BP_Man.Kv_BP_Man
 OpenAssetsAtExit=/Game/Kvik/Kvik_Modes/Players/Player_3_Lan/LanBP_Kv_PlayerHand.LanBP_Kv_PlayerHand
+OpenAssetsAtExit=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/BP_Kv_PlayerHand_Pawn.BP_Kv_PlayerHand_Pawn
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -528,17 +530,19 @@ GameplayTagsDeveloperSettings="\"Object\" "
 LogVisualizerSettings="\"Object\" "
 SlateThemeManager="\"Object\" "
 Kv_BP_Man_C="\"Object\" "
+Kv_BTR_2_Pawn_C="\"Object\" "
+WheeledVehiclePawn="\"Object\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Kvik/Kvik_Modes/Players/Player_3_Lan/LanBP_Kv_PlayerHand
-MRUItem1=/Game/Kvik/Kvik_Modes/Players/Player_1/Kv_BP_Man
-MRUItem2=/Game/Kvik/Kvik_Modes/Players/BP_Kv_PlayerController
-MRUItem3=/Game/Kvik/KvikSave/Untitled
-MRUItem4=/Game/Kvik/KvikSave/TestLevel
-MRUItem5=/Game/Kvik/Kv_UI_Canvas/UI_Kv_Intepface
-MRUItem6=/Game/Kvik/Kv_UI_Canvas/Kv_Help_Player
-MRUItem7=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ChController_Player_new
-MRUItem8=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/BP_Kv_PlayerHand_Pawn
+MRUItem0=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/BP_Kv_PlayerHand_Pawn
+MRUItem1=/Game/Kvik/KvikSave/TestLevel
+MRUItem2=/Game/Kvik/Kvik_Modes/Players/Player_3_Lan/LanBP_Kv_PlayerHand
+MRUItem3=/Game/Kvik/Kvik_Modes/Players/Player_1/Kv_BP_Man
+MRUItem4=/Game/Kvik/Kvik_Modes/Players/BP_Kv_PlayerController
+MRUItem5=/Game/Kvik/KvikSave/Untitled
+MRUItem6=/Game/Kvik/Kv_UI_Canvas/UI_Kv_Intepface
+MRUItem7=/Game/Kvik/Kv_UI_Canvas/Kv_Help_Player
+MRUItem8=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ChController_Player_new
 MRUItem9=/Game/Kvik/KvikSave/Test_Car
 MRUItem10=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/ABP_Kv_Hand_Anim
 MRUItem11=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/ABP_Kv_AK_2
@@ -1628,6 +1632,68 @@ DataValidationSettings.Validation Scenarios=True
 GameplayDebuggerUserSettings.GameplayDebugger=True
 GameplayTagsDeveloperSettings.GameplayTags=True
 LogVisualizerSettings.VisualLogger=True
+LanBP_Kv_PlayerHand_C.Default=True
+LanBP_Kv_PlayerHand_C.Tick=True
+LanBP_Kv_PlayerHand_C.Character=True
+LanBP_Kv_PlayerHand_C.Camera=True
+LanBP_Kv_PlayerHand_C.Pawn=True
+LanBP_Kv_PlayerHand_C.Replication=True
+LanBP_Kv_PlayerHand_C.Rendering=True
+LanBP_Kv_PlayerHand_C.Collision=True
+LanBP_Kv_PlayerHand_C.Actor=True
+LanBP_Kv_PlayerHand_C.Input=True
+LanBP_Kv_PlayerHand_C.HLOD=True
+LanBP_Kv_PlayerHand_C.WorldPartition=True
+LanBP_Kv_PlayerHand_C.Events=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.Lightmass=True
+DirectionalLight.LightShafts=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.RayTracing=True
+DirectionalLight.AtmosphereAndCloud=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.HLOD=True
+DirectionalLight.Actor=True
+ExponentialHeightFog.TransformCommon=True
+ExponentialHeightFog.ExponentialHeightFogComponent=True
+ExponentialHeightFog.InscatteringTexture=True
+ExponentialHeightFog.DirectionalInscattering=True
+ExponentialHeightFog.VolumetricFog=True
+ExponentialHeightFog.Rendering=True
+ExponentialHeightFog.Tags=True
+ExponentialHeightFog.Activation=True
+ExponentialHeightFog.Cooking=True
+ExponentialHeightFog.Replication=True
+ExponentialHeightFog.Actor=True
+SkyAtmosphere.TransformCommon=True
+SkyAtmosphere.Planet=True
+SkyAtmosphere.Atmosphere=True
+SkyAtmosphere.Atmosphere - Rayleigh=True
+SkyAtmosphere.Atmosphere - Mie=True
+SkyAtmosphere.Atmosphere - Absorption=True
+SkyAtmosphere.Art Direction=True
+SkyAtmosphere.Rendering=True
+SkyAtmosphere.Tags=True
+SkyAtmosphere.Activation=True
+SkyAtmosphere.Cooking=True
+SkyAtmosphere.Replication=True
+SkyAtmosphere.Actor=True
+Kv_BTR_2_Pawn_C.TransformCommon=True
+Kv_BTR_2_Pawn_C.Default=True
+Kv_BTR_2_Pawn_C.Pawn=True
+Kv_BTR_2_Pawn_C.Camera=True
+Kv_BTR_2_Pawn_C.Rendering=True
+Kv_BTR_2_Pawn_C.Replication=True
+Kv_BTR_2_Pawn_C.Collision=True
+Kv_BTR_2_Pawn_C.HLOD=True
+Kv_BTR_2_Pawn_C.Input=True
+Kv_BTR_2_Pawn_C.Actor=True
 
 [SuppressableDialogs]
 DeleteComponentInUse_Warning=False
