--- a/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/WarInUkraine/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -135,11 +135,12 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 RotGridEnabled=False
 
 [MRU]
-MRUItem0=/Game/Kvik/KvikSave/TestLevel
-MRUItem1=/Game/Kvik/KvikSave/Kvik_Menu_Start_Game
-MRUItem2=/Game/Kvik/KvikSave/Untitled
-MRUItem3=/Game/Kvik/KvikSave/Test_Car
-MRUItem4=/Game/1WUI/SceneFirst/TestLight
+MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem1=/Game/Kvik/KvikSave/TestLevel
+MRUItem2=/Game/Kvik/KvikSave/Kvik_Menu_Start_Game
+MRUItem3=/Game/Kvik/KvikSave/Untitled
+MRUItem4=/Game/Kvik/KvikSave/Test_Car
+MRUItem5=/Game/1WUI/SceneFirst/TestLight
 
 [DetailCustomWidgetExpansion]
 StaticMeshActor=StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,BoxComponent.Physics.ConstraintsGroup,BoxComponent.TransformCommon.Transform,
@@ -271,7 +272,7 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Kvik/KvikSave/TestLevel
+LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -534,26 +535,26 @@ WheeledVehiclePawn="\"Object\" "
 LanBP_Kv_PlayerHand_C="\"Object\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/BP_Kv_PlayerHand_Pawn
-MRUItem1=/Game/Kvik/KvikSave/TestLevel
-MRUItem2=/Game/Kvik/KvikSave/Kvik_Menu_Start_Game
-MRUItem3=/Game/Kvik/Kvik_Modes/Players/Player_3_Lan/LanBP_Kv_PlayerHand
-MRUItem4=/Game/Kvik/Kvik_Modes/Players/Player_1/Kv_BP_Man
-MRUItem5=/Game/Kvik/Kvik_Modes/Players/BP_Kv_PlayerController
-MRUItem6=/Game/Kvik/KvikSave/Untitled
-MRUItem7=/Game/Kvik/Kv_UI_Canvas/UI_Kv_Intepface
-MRUItem8=/Game/Kvik/Kv_UI_Canvas/Kv_Help_Player
-MRUItem9=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ChController_Player_new
-MRUItem10=/Game/Kvik/KvikSave/Test_Car
-MRUItem11=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/ABP_Kv_Hand_Anim
-MRUItem12=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/ABP_Kv_AK_2
-MRUItem13=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ABP_Kv_NawHand
-MRUItem14=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Fire_animation_1_7
-MRUItem15=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Fire_animation_1_7
-MRUItem16=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Run_animation_0_3
-MRUItem17=/Game/FirstPerson/Blueprints/BP_Rifle
-MRUItem18=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem19=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Fire_animation_1_5
+MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem1=/Game/Kvik/Effects/BP_Kv_Explosion_Actor
+MRUItem2=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/BP_Kv_PlayerHand_Pawn
+MRUItem3=/Game/Kvik/KvikSave/TestLevel
+MRUItem4=/Game/Kvik/KvikSave/Kvik_Menu_Start_Game
+MRUItem5=/Game/Kvik/Kvik_Modes/Players/Player_3_Lan/LanBP_Kv_PlayerHand
+MRUItem6=/Game/Kvik/Kvik_Modes/Players/Player_1/Kv_BP_Man
+MRUItem7=/Game/Kvik/Kvik_Modes/Players/BP_Kv_PlayerController
+MRUItem8=/Game/Kvik/KvikSave/Untitled
+MRUItem9=/Game/Kvik/Kv_UI_Canvas/UI_Kv_Intepface
+MRUItem10=/Game/Kvik/Kv_UI_Canvas/Kv_Help_Player
+MRUItem11=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ChController_Player_new
+MRUItem12=/Game/Kvik/KvikSave/Test_Car
+MRUItem13=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/ABP_Kv_Hand_Anim
+MRUItem14=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/ABP_Kv_AK_2
+MRUItem15=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/ABP_Kv_NawHand
+MRUItem16=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/AK_2_Anim/Hand_Fire_animation_1_7
+MRUItem17=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Fire_animation_1_7
+MRUItem18=/Game/Kvik/Kvik_Modes/Players/Player_Hand/Test_hand/NewFolder/Hand_Run_animation_0_3
+MRUItem19=/Game/FirstPerson/Blueprints/BP_Rifle
 
 [DetailCategories]
 BP_Kv_PlayerHand_Pawn_C.Default=True
@@ -1694,6 +1695,15 @@ Kv_BTR_2_Pawn_C.Collision=True
 Kv_BTR_2_Pawn_C.HLOD=True
 Kv_BTR_2_Pawn_C.Input=True
 Kv_BTR_2_Pawn_C.Actor=True
+BP_Kv_Explosion_Actor_C.Tick=True
+BP_Kv_Explosion_Actor_C.Replication=True
+BP_Kv_Explosion_Actor_C.Rendering=True
+BP_Kv_Explosion_Actor_C.Collision=True
+BP_Kv_Explosion_Actor_C.Actor=True
+BP_Kv_Explosion_Actor_C.Input=True
+BP_Kv_Explosion_Actor_C.HLOD=True
+BP_Kv_Explosion_Actor_C.WorldPartition=True
+BP_Kv_Explosion_Actor_C.Events=True
 
 [SuppressableDialogs]
 DeleteComponentInUse_Warning=False
@@ -1753,6 +1763,7 @@ DeleteConfirmationVariable_Warning=False
 /Game/Kvik/Kvik_Modes/Players/Player_1/Kv_BP_Man.Kv_BP_Man=0
 /Game/Kvik/Kvik_Modes/Players/BP_Kv_PlayerController.BP_Kv_PlayerController=0
 /Game/Kvik/Kvik_Modes/Players/Player_3_Lan/LanBP_Kv_PlayerHand.LanBP_Kv_PlayerHand=0
+/Game/Kvik/Effects/BP_Kv_Explosion_Actor.BP_Kv_Explosion_Actor=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
